Add analysis action and highlighting, fix class fields naming
Analysis is supposed to be offline. It means that user need to launch it
manually, so corresponding action has been added.
Highlightings are supported only for class fields, it does nothing
except printing simple warning.
There was a misunderstanding between original compiler's class fields
naming and fields tainter, so consensus has been established.

--- a/src/ReSharperPlugin/ReSharperPlugin.csproj
+++ b/src/ReSharperPlugin/ReSharperPlugin.csproj
@@ -39,7 +39,7 @@
 
   <ItemGroup>
     <Folder Include="src\Options\" />
-    <Folder Include="src\Warnings\" />
+    <Folder Include="src\Stages\Utils\" />
   </ItemGroup>
   
 </Project>
