Integrate test framework, add simple test cases
There is a test runner that performs the full analysis simulation including
compiling, taint tracking and highlighting.
Existing tests check some cases of value passing inside single class.

--- a/test/src/PDASimulator.Tests/PDASimulator.Tests.csproj
+++ b/test/src/PDASimulator.Tests/PDASimulator.Tests.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\PDASimulator\PDASimulator.csproj" />
+    <ProjectReference Include="..\..\..\src\PDASimulator\PDASimulator.csproj" />
   </ItemGroup>
 
 </Project>
