--- a/src/AbstractIL.Internal/AbstractIL.Internal.csproj
+++ b/src/AbstractIL.Internal/AbstractIL.Internal.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DotNet.Contracts" Version="1.10.20606.1" />
     <PackageReference Include="FSharp.Core" Version="4.5.4" />
+    <PackageReference Include="FSharpx.Collections.Experimental" Version="1.17.0" />
     <PackageReference Include="YC.QuickGraph" Version="3.7.4" />
   </ItemGroup>
 
