Fix plugin tests running, add AppVeyor configuration

--- a/test/src/PDASimulator.Tests/PDASimulator.Tests.csproj
+++ b/test/src/PDASimulator.Tests/PDASimulator.Tests.csproj
@@ -2,10 +2,10 @@
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFramework>net461</TargetFramework>
+    <TargetFramework>net472</TargetFramework>
     <ApplicationIcon />
     <StartupObject />
-    <AssemblyName>Cofra.PDASimulator.Tests</AssemblyName>
+    <AssemblyName>PDASimulator.Tests</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
