--- a/test/src/ReSharperPlugin.Tests/ReSharperPlugin.Tests.csproj
+++ b/test/src/ReSharperPlugin.Tests/ReSharperPlugin.Tests.csproj
@@ -5,7 +5,7 @@
     <ApplicationIcon />
     <OutputType>Library</OutputType>
     <StartupObject />
-    <AssemblyName>Cofra.ReSharperPlugin.Tests</AssemblyName>
+    <AssemblyName>ReSharperPlugin.Tests</AssemblyName>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -17,6 +17,8 @@
     <PackageReference Include="JetBrains.ReSharper.SDK.Tests" Version="2018.3.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
     <PackageReference Include="NUnit" Version="2.6.4" />
+    <PackageReference Include="NUnit.ConsoleRunner" Version="3.9.0" />
+    <PackageReference Include="NUnit.Extension.NUnitV2Driver" Version="3.7.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.13.0" />
   </ItemGroup>
 
