--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,6 +19,9 @@ build:
   project: CoFRA.sln
 
   verbosity: normal
+  
+before_build:
+  dotnet restore CoFRA.sln
 
 after_build:
   .\build_plugin.cmd
