--- a/scripts/data/Rider/META-INF/plugin.xml
+++ b/scripts/data/Rider/META-INF/plugin.xml
@@ -1,11 +1,12 @@
 <idea-plugin>
   <depends>com.intellij.modules.rider</depends>
-  <idea-version since-build="183.1" until-build="191.*"/>
+  <idea-version since-build="181.4379" until-build="191.*"/>
   
   <id>com.wtf.cofra</id>
   <version>0.1.0</version>
   <name>CoFRA Integration</name>
   <vendor url="https://www.example.com">NII</vendor>
   <description>ReSharper plugin for interprocedural analysis.</description>
+  <extensions defaultExtensionNs="com.intellij" />
   <change-notes>Initial release.</change-notes>
 </idea-plugin>
