--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,10 +25,11 @@ before_build:
 
 after_build:
   .\scripts\build_plugin.cmd
+  .\scripts\pack_rider_plugin.cmd
 
 test_script:
   .\scripts\run_tests_appveyor.cmd
 
 artifacts:
   - path: 'Cofra.ReSharperPlugin.0.1.0.nupkg'
-  - path: 'Cofra.RiderPlugin.0.1.0.nupkg'
+  - path: 'Cofra.RiderPlugin.0.1.0.zip'
