--- a/src/PDASimulator/PDASimulator.csproj
+++ b/src/PDASimulator/PDASimulator.csproj
@@ -1,7 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <PropertyGroup Condition=" '$(OS)' == 'Windows_NT' ">
+    <TargetFrameworks>net472</TargetFrameworks>
+  </PropertyGroup>
+
+  <PropertyGroup Condition=" '$(OS)' == 'Unix' ">
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+  </PropertyGroup>
+
   <PropertyGroup>
-    <TargetFramework>net461</TargetFramework>
     <AssemblyName>Cofra.PDASimulator</AssemblyName>
   </PropertyGroup>
 
