--- a/test/src/ReSharperPlugin.Tests/ReSharperPlugin.Tests.csproj
+++ b/test/src/ReSharperPlugin.Tests/ReSharperPlugin.Tests.csproj
@@ -13,13 +13,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="JetBrains.ReSharper.SDK" Version="2019.1.1" />
-    <PackageReference Include="JetBrains.ReSharper.SDK.Tests" Version="2019.1.1" />
+    <PackageReference Include="JetBrains.ReSharper.SDK" Version="2019.2.3" />
+    <PackageReference Include="JetBrains.ReSharper.SDK.Tests" Version="2019.2.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
-    <PackageReference Include="NUnit" Version="2.6.4" />
-    <PackageReference Include="NUnit.ConsoleRunner" Version="3.9.0" />
-    <PackageReference Include="NUnit.Extension.NUnitV2Driver" Version="3.7.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.13.0" />
+    <PackageReference Include="NUnit" Version="3.10.1" />
+    <PackageReference Include="NUnit.ConsoleRunner" Version="3.10.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
     <PackageReference Include="Microsoft.TestPlatform.ObjectModel" Version="15.0.0" />
     <PackageReference Include="Microsoft.TestPlatform.TranslationLayer" Version="15.0.0" />
   </ItemGroup>
@@ -40,6 +39,6 @@
   </Target>
   
   <Target Name="RunTestsAppVeyor">
-    <Exec Command="nunit-console.exe &quot;$(OutputPath)\ReSharperPlugin.Tests.dll&quot;" />
+    <Exec Command="nunit3-console.exe &quot;$(OutputPath)\ReSharperPlugin.Tests.dll&quot;" />
   </Target>
 </Project>
